tests/checker/fail/duplicate_type_definition.can
Foo = String

Foo = Int

Unit => Program {
    "ok".print()
}
